# wasm-syntax

./: .gitattributes  .gitignore  404.html  GEMINI.md  README.md  TODO.txt  ast.ml  cli.html  convert.ml  dune  dune-project  examples.html  from_wasm.ml  from_wasm.mli  index.html  introduction.html  language.html  lexer.ml  lexer.mli  lexer.mll  main.ml  misc.ml  output.ml  output.mli  parser.mly  parser_messages.messages  pretty_print.ml  print.html  run_wasm_testsuite.ml  searcher-c2a407aa.js  searchindex-11de6311.js  searchindex-38ff172e.js  searchindex-44265359.js  searchindex-71e544c5.js  searchindex-d78572d3.js  searchindex-de095ff6.js  test.txt  test_wasm.ml  toc-679074a5.js  toc-dee6d562.js  (+5 more)
conversion/: dune  from_wasm.ml  from_wasm.mli
correspondence/: instructions.html  intro.html  module_fields.html  types.html
docs/: book.toml
scripts/: build_unicode_width_table.ml  dune  fill_parser_messages.py  generate_error_messages.ml  parse_messages.ml  parse_messages.mli
test/: bigarray.wat  convert.ml  dune  expected.wax  output.wat.expected  output.wax.expected  wasm_test_suite.expected
test/additional-tests/: type-subtype.wast
test/cram-tests/: dune
test/cram-tests/holes.t/: bad1.wax  bad2.wax  bad3.wax  bad4.wax  bad5.wax  good.wax  run.t
test/diagnostics/: dune  test_diagnostic.expected  test_diagnostic.ml
test/wasmoo/: dune  dune.inc  gen_dune.ml
test/wasmoo/wasm-formatted/: array.wat  backtrace.wat  bigarray.wat  bigstring.wat  compare.wat  custom.wat  domain.wat  effect.wat  fail.wat  float.wat  fs.wat  gc.wat  hash.wat  int32.wat  int64.wat  ints.wat  io.wat  jslib.wat  jslib_js_of_ocaml.wat  jsstring.wat  lexing.wat  marshal.wat  md5.wat  nat.wat  obj.wat  parsing.wat  printexc.wat  prng.wat  runtime_events.wat  stdlib.wat  str.wat  string.wat  sync.wat  sys.wat  toplevel.wat  unix.wat  weak.wat  zstd.wat
test/wasmoo/wasm-round-trip/: array.wat  backtrace.wat  bigarray.wat  bigstring.wat  compare.wat  custom.wat  domain.wat  effect.wat  fail.wat  float.wat  fs.wat  gc.wat  hash.wat  int32.wat  int64.wat  ints.wat  io.wat  jslib.wat  jslib_js_of_ocaml.wat  jsstring.wat  lexing.wat  marshal.wat  md5.wat  nat.wat  obj.wat  parsing.wat  printexc.wat  prng.wat  runtime_events.wat  stdlib.wat  str.wat  string.wat  sync.wat  sys.wat  toplevel.wat  unix.wat  weak.wat  zstd.wat
test/wasmoo/wasm-source/: array.wat  bigstring.wat  compare.wat  effect.wat  float.wat  fs.wat  hash.wat  int64.wat  ints.wat  io.wat  jslib.wat  jsstring.wat  lexing.wat  marshal.wat  obj.wat  stdlib.wat  str.wat  sys.wat
test/wasmoo/wax/: array.wax  backtrace.wax  bigarray.wax  bigstring.wax  compare.wax  custom.wax  domain.wax  effect.wax  fail.wax  float.wax  fs.wax  gc.wax  hash.wax  int32.wax  int64.wax  ints.wax  io.wax  jslib.wax  jslib_js_of_ocaml.wax  jsstring.wax  lexing.wax  marshal.wax  md5.wax  nat.wax  obj.wax  parsing.wax  printexc.wax  prng.wax  runtime_events.wax  stdlib.wax  str.wax  string.wax  sync.wax  sys.wax  toplevel.wax  unix.wax  weak.wax  zstd.wax
utils/: ast.ml  ast.mli  dune  printer.ml  printer.mli  uint32.mli  uint64.mli
wasm/: ast.ml  dune  dune.menhir  folding.ml  folding.mli  lexer.ml  lexer.mli  main.ml  misc.ml  misc.mli  output.ml  output.mli  parser.mly  parser_messages.messages  parsing.ml  parsing.mli  printer.ml  printer.mli  types.ml  types.mli  uint32.ml  uint64.ml  uint64.mli  validation.ml  validation.mli
wax/: ast.ml  ast.mli  dune  lexer.ml  lexer.mli  output.ml  output.mli  (+1 more)
(+90 files in other folders)
