(executable (name convert)
 (libraries cmdliner wasm wax conversion)
 (preprocess
  (pps sedlex.ppx)))

(rule
 (target output.wax)
 (action
  (run ./convert.exe -o output.wax %{dep:bigarray.wat})))

(rule
 (alias runtest)
 (action
  (diff expected.wax output.wax)))

(rule
 (target output.wat)
 (action
  (run ./convert.exe -o output.wat %{dep:bigarray.wat})))

(rule
 (alias runtest)
 (action
  (diff expected.wat output.wat)))
