(rule
 (target output.wax)
 (action
  (run wax -o output.wax %{dep:bigarray.wat})))

(rule
 (alias runtest)
 (action
  (diff output.wax.expected output.wax)))

(rule
 (target output.wat)
 (action
  (run wax -o output.wat %{dep:bigarray.wat})))

(rule
 (alias runtest)
 (action
  (diff output.wat.expected output.wat)))
