(rule
 (target output.wax)
 (action
  (run wax --validate -o output.wax %{dep:bigarray.wat})))

(rule
 (alias runtest)
 (action
  (diff output.wax.expected output.wax)))

(rule
 (target output.wat)
 (action
  (run wax --validate -o output.wat %{dep:bigarray.wat})))

(rule
 (alias runtest)
 (action
  (diff output.wat.expected output.wat)))

(rule
 (deps (glob_files_rec wasm-test-suite/*.wast))
 (action
  (with-stdout-to wasm_test_suite.output
   (run ../src/bin/run_wasm_testsuite.exe --wasm-only --no-color))))


(rule
 (alias runtest)
 (action
  (diff wasm_test_suite.expected wasm_test_suite.output)))
